--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@datorama/akita": "^8.0.1",
+    "@datorama/akita-ng-entity-service": "^8.0.0",
     "@datorama/akita-ngdevtools": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
